syntax = "proto3";

package mir;

option go_package = "github.com/filecoin-project/mir/pkg/pb/mir";

import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
  bool event = 60000;
  bool message = 60001;
  bool struct = 60002;
  bool event_root = 60003;
}

extend google.protobuf.OneofOptions {
  bool event_type = 60000;
}

extend google.protobuf.FieldOptions {
  string type = 60000;
}
